[build-system]
requires = [
  "setuptools >= 45",
  "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "vecgl"
authors = [
  { name = "Frederik Gossen", email = "frederik.gossen@gmail.com" },
]
description = "VecGL is a 3D rendering engine with vector output"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
  "rendering",
  "rendering engine",
  "3D engine",
  "vector graphics",
  "graphics library",
  "3D",
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
lint = [
  "isort >= 5.12.0",
]
test = [
  "pytest >= 7.0.1",
  "pytest-benchmark >= 3.4.1",
]
release = [
  "build >= 0.7.0",
  "twine >= 3.8.0",
]

[tool.setuptools_scm]
write_to = "src/vecgl/_version.py"
